--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -313,6 +313,8 @@ jobs:
               cp dist/discovery-web-dev.js build/discovery-web-dev-$VERSION.js
               cp dist/discovery-web-dev.js.map build/discovery-web-dev-$VERSION.js.map
               cp dist/discovery-web.js build/discovery-web-$VERSION.js
+              sbt npmPackageJson
+              cp package.json build/
             fi
 
       - persist_to_workspace:
@@ -340,12 +342,15 @@ jobs:
             # -------------------------------------------------------
             if [ "LAST_VERSION" != "VERSION" ]; then
               go get github.com/tcnksm/ghr
-              npm install generate-changelog -g
+              npm i generate-changelog -g
+              mv build/package.json .
+              BODY=$(changelog -a -f -)
               ghr -t ${GITHUB_TOKEN} \
                   -u ${CIRCLE_PROJECT_USERNAME} \
                   -r ${CIRCLE_PROJECT_REPONAME} \
                   -c ${CIRCLE_SHA1} \
                   -n $VERSION \
+                  -b $BODY \
                   -delete $VERSION build/
             fi
 # obsolete
