ci: fix npm tools to build changelog

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,6 +301,8 @@ jobs:
     executor: openjdk
     steps:
       - checkout
+      - node/install:
+          node-version: '17.9'
       - run:
           name: Release Assembly
           command: |
