--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ workflows:
             - compile
           context:
             - DOCKER_CONTEXT
+          environment:
+            - NODE_VERSION: 18.1
 
       - test_and_coverage_jvm:
           requires:
@@ -44,10 +46,33 @@ workflows:
             - DOCKER_CONTEXT
 
       - proxy_discovery_test:
-#          requires:
-#            - test_and_coverage_jvm
+          requires:
+            - test_and_coverage_jvm
           context:
             - DOCKER_CONTEXT
+          environment:
+              - MILL_VERSION: 0.10.4
+      # only develop is build and push on dockerhub !
+      - docker_build_proxy_discovery_branch:
+          context:
+            - DOCKER_CONTEXT
+          filters:
+            tags:
+              ignore: /.*/
+            branches:
+              only:
+                - develop
+
+      # all tags are build and push on dockerhub !
+      - docker_build_proxy_discovery_tag_latest:
+          context:
+            - DOCKER_CONTEXT
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              # nothing coming from branch are deployed as latest
+              ignore: /.*/
 
       - publish_snapshot:
           requires:
@@ -160,6 +185,13 @@ executors:
             CORS: "true"
             DEBUG: "true"
 
+  docker-publisher:
+    docker:
+      - image: circleci/buildpack-deps:stretch
+        auth:
+          username: ${DOCKER_USER}
+          password: ${DOCKER_PASS}
+
 jobs:
   compile:
     executor: openjdk
@@ -213,8 +245,44 @@ jobs:
           name: Test JVM env and Coverage
           command: |
             cd service-discovery-proxy
-            curl -L https://github.com/com-lihaoyi/mill/releases/download/0.10.4/0.10.4 > mill && chmod +x mill
+            curl -L https://github.com/com-lihaoyi/mill/releases/download/${MILL_VERSION}/${MILL_VERSION} > mill
+            chmod +x mill
             ./mill app.test
+
+  docker_build_proxy_discovery_branch:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Publish Docker Image to Docker Hub
+          # publication of <application>:<application_branch>
+          command: |
+            IMAGE_NAME=service-discovery-proxy:${CIRCLE_BRANCH}
+            
+            docker build -t ${ORGANIZATION_NAME}/${IMAGE_NAME} .
+            echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin
+            docker push ${ORGANIZATION_NAME}/${IMAGE_NAME}
+
+  docker_build_proxy_discovery_tag_latest:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Publish Docker Tag to Docker Hub
+          # publication of <application>:<application_tag>
+          command: |
+            IMAGE_NAME=service-discovery-proxy:${CIRCLE_TAG}
+            IMAGE_NAME_LATEST=service-discovery-proxy:latest
+
+            docker build -t ${ORGANIZATION_NAME}/${IMAGE_NAME} .
+            docker build -t ${ORGANIZATION_NAME}/${IMAGE_NAME_LATEST} .
+
+            echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin
+            docker push ${ORGANIZATION_NAME}/${IMAGE_NAME}
+            docker push ${ORGANIZATION_NAME}/${IMAGE_NAME_LATEST}
+
   test_js:
       executor: virtuoso_environment_executor
       environment:
@@ -224,7 +292,7 @@ jobs:
         - checkout
         - setup_remote_docker
         - node/install:
-            node-version: '17.9'
+            node-version: $NODE_VERSION
         - run:
             name: Test ScalaJs/JavaScript
             command: sbt discoveryJS/test
