--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,6 +302,7 @@ jobs:
             export NODE_OPTIONS=--openssl-legacy-provider
             sbt discoveryJS/fastOptJS/webpack
             sbt npmPackageJson
+            npm i
             npm link
             cd ts
             npm link @p2m2/discovery
