--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,6 +301,7 @@ jobs:
             ## bug with Node 17 -> https://github.com/webpack/webpack/issues/14532
             export NODE_OPTIONS=--openssl-legacy-provider
             sbt discoveryJS/fastOptJS/webpack
+            sbt discoveryJS/fullOptJS/webpack
             sbt npmPackageJson
             npm i
             npm link
